--- a/package.json
+++ b/package.json
@@ -9,15 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-<<<<<<< HEAD
     "@auth/prisma-adapter": "^1.0.9",
-    "next": "14.0.2",
-    "next-auth": "^4.24.5",
-=======
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.6.0",
     "next": "14.0.2",
+    "next-auth": "^4.24.5",
     "prisma": "^5.6.0",
->>>>>>> main
     "react": "^18",
     "react-dom": "^18"
   },
