--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "npx prisma db seed"
   },
   "dependencies": {
     "@prisma/client": "^5.6.0",
@@ -26,6 +27,9 @@
     "eslint-config-next": "14.0.2",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
+    "tsx": "^4.6.2",
     "typescript": "^5"
-  }
+  },
+  "prisma": {
+    "seed": "tsx src/prisma/seed.ts"  }
 }
