--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next-auth": "^4.24.5",
     "prisma": "^5.6.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-tooltip": "^5.25.0"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -34,5 +35,6 @@
     "typescript": "^5"
   },
   "prisma": {
-    "seed": "tsx src/prisma/seed.ts"  }
+    "seed": "tsx src/prisma/seed.ts"
+  }
 }
