--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "prisma": "^5.6.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-tooltip": "^5.25.0"
+    "react-tooltip": "^5.25.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
