Use postgres as db

--- a/.env
+++ b/.env
@@ -11,3 +11,29 @@ NEXTAUTH_URL="http://localhost:3000"
 # Next Auth Discord Provider
 DISCORD_CLIENT_ID="1178282127742214174"
 DISCORD_CLIENT_SECRET="f3cvCMg4hqdhu-GzdMTZ6SEYa2OjyxxY"
+
+# Created by Vercel CLI
+NX_DAEMON=""
+POSTGRES_DATABASE="verceldb"
+POSTGRES_HOST="ep-bitter-forest-80787417-pooler.eu-central-1.postgres.vercel-storage.com"
+POSTGRES_PASSWORD="v86zGDoClXdO"
+POSTGRES_PRISMA_URL="postgres://default:v86zGDoClXdO@ep-bitter-forest-80787417-pooler.eu-central-1.postgres.vercel-storage.com/verceldb?pgbouncer=true&connect_timeout=15"
+POSTGRES_URL="postgres://default:v86zGDoClXdO@ep-bitter-forest-80787417-pooler.eu-central-1.postgres.vercel-storage.com/verceldb"
+POSTGRES_URL_NON_POOLING="postgres://default:v86zGDoClXdO@ep-bitter-forest-80787417.eu-central-1.postgres.vercel-storage.com/verceldb"
+POSTGRES_USER="default"
+TURBO_REMOTE_ONLY=""
+TURBO_RUN_SUMMARY=""
+VERCEL="1"
+VERCEL_ENV="development"
+VERCEL_GIT_COMMIT_AUTHOR_LOGIN=""
+VERCEL_GIT_COMMIT_AUTHOR_NAME=""
+VERCEL_GIT_COMMIT_MESSAGE=""
+VERCEL_GIT_COMMIT_REF=""
+VERCEL_GIT_COMMIT_SHA=""
+VERCEL_GIT_PREVIOUS_SHA=""
+VERCEL_GIT_PROVIDER=""
+VERCEL_GIT_PULL_REQUEST_ID=""
+VERCEL_GIT_REPO_ID=""
+VERCEL_GIT_REPO_OWNER=""
+VERCEL_GIT_REPO_SLUG=""
+VERCEL_URL=""
