--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@prisma/client": "^5.6.0",
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-query-devtools": "^4.36.1",
+    "@vercel/postgres": "^0.5.1",
     "next": "14.0.2",
     "next-auth": "^4.24.5",
     "prisma": "^5.6.0",
