Update readme, profile loader, metadata

--- a/.env
+++ b/.env
@@ -37,3 +37,4 @@ VERCEL_GIT_REPO_ID=""
 VERCEL_GIT_REPO_OWNER=""
 VERCEL_GIT_REPO_SLUG=""
 VERCEL_URL=""
+DEPLOY_URL="https://honest-movie-db-pv247.vercel.app"
